syntax = "proto3";
option java_multiple_files = true;
package com.example.bookstore.proto;

message BookId {
  string id = 1;
}

message Book {
  BookId id = 1;
  string author = 2;
  string title = 3;
  string isbn = 4;
  int32 quantity = 5;
}

message Books {
  repeated Book books = 1;
}

message CreateBook {
  string author = 1;
  string title = 2;
  string isbn = 3;
  int32 quantity = 4;
}

message UpdateResponse {
  Response response = 1;
}

message DeleteResponse {
  Response response = 1;
  Book book = 2;
}

message BookResponse {
  Response response = 1;
    Book book = 2;
}

message GetAllResponse {
  Response response = 1;
  repeated Book books = 2;
}

message Response {
  string description = 1;
  enum Status {
    OK = 0;
    NOT_FOUND = 1;
    ERROR = 2;
  }
  Status status = 2;
}

message GetAllBooks {
}

service BookService {
  rpc getAll(GetAllBooks) returns (GetAllResponse);
  rpc getById(BookId) returns (BookResponse);
  rpc create(CreateBook) returns (BookResponse);
  rpc update(Book) returns (UpdateResponse);
  rpc delete(BookId) returns (DeleteResponse);
}